--- a/trunk/abstractpage_comp.tex
+++ b/trunk/abstractpage_comp.tex
@@ -1,28 +1,29 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \begin{abstract}
-\input{abstract}
+\input{abstract_comp}
 \end{abstract}
 
 \vskip\baselineskip\noindent
-This report documents McStas version \version, released May 1, 2005.
+This report documents the components for McStas version \version, 
+released \reldate .
 \vskip\baselineskip\noindent
 The authors are:
 \begin{quote}
 \label{p:authors}
 \vskip\baselineskip\noindent
-Peter Kj\ae r Willendrup \\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark \\
-email: \verb+peter.willendrup@risoe.dk+
-\vskip\baselineskip\noindent
 Kim Lefmann \\
 Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark \\
 email: \verb+kim.lefmann@risoe.dk+
 \vskip\baselineskip\noindent
+Peter Kj\ae r Willendrup \\
+Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark \\
+email: \verb+peter.willendrup@risoe.dk+
+\vskip\baselineskip\noindent
 Emmanuel Farhi \\
 Institut Laue-Langevin, Grenoble, France \\
 email: \verb+farhi@ill.fr+ \\
-
+\vskip\baselineskip\noindent
 Klaus Lieutenant \\
 Institut Laue-Langevin, Grenoble, France \\
 email: \verb+lieutenant@ill.fr+
