--- a/trunk/datablad_comp.tex
+++ b/trunk/datablad_comp.tex
@@ -58,7 +58,7 @@ Telefax +45 4677 4013
 \begin{datablad}
 \titel{Component Manual to the Neutron Ray-Tracing Package
  \MCS , Version \version}
-\forfatter{Peter Kj\ae r Willendrup, Kim Lefmann, Emmanuel Farhi, Klaus Lieutenant}
+\forfatter{Kim Lefmann, Peter Kj\ae r Willendrup, Emmanuel Farhi, Klaus Lieutenant}
 \isbn{87--550--2929--9; 87--550--2930--2 (Internet)}\issn{0106--2840}
 \afdeling{Materials Research Department}
 \dato{\reldate}
