--- a/trunk/preface_comp.tex
+++ b/trunk/preface_comp.tex
@@ -3,13 +3,13 @@
 \addcontentsline{toc}{chapter}{\protect\numberline{}{Preface and acknowledgements}}
 \chapter*{Preface and acknowledgements}
 This document contains information on the neutron scattering components 
-which are the building blocks for describing instruments 
+which are the building blocks for defining instruments 
 in the Monte Carlo neutron
 ray-tracing program \MCS\ version \version . The initial
 release in October 1998 of version 1.0 was presented in Ref.~\cite{NNews}. 
 The reader of this
 document is not supposed to have specific knowledge of neutron scattering,
-but some basic understanding of the underlying physics is helpful in
+but some basic understanding of physics is helpful in
 understanding the theoretical background for the component functionality. 
 For details about simulation techniques, we refer to 
 the \MCS\ system manual \cite{mcstasmanual}.
@@ -62,7 +62,7 @@ In FP5, \MCS\ was supported strongly through the
 ``SCANS'' program. 
 Currently, in FP6, \MCS\ is supported through the Joint Research Activity
 ``MCNSI'' under the Integrated Infrastructure Initiative ``NMI3'', see
-the WWW home pages~\cite{mcnsi_webpage,nmi3_webpage}
+the WWW home pages~\cite{mcnsi_webpage,nmi3_webpage}.
 
 
 
