--- a/trunk/risoe-rep_comp-title.tex
+++ b/trunk/risoe-rep_comp-title.tex
@@ -40,6 +40,6 @@
 \title{Component~Manual~for~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS,\\ Version \version\ }
-\author{Peter Kj\ae r Willendrup, Kim Lefmann, Emmanuel Farhi, and Klaus Lieutenant}
+\author{Kim Lefmann, Peter Kj\ae r Willendrup, Emmanuel Farhi, and Klaus Lieutenant}
 \maketitle
 \endgroup
