--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -148,7 +148,7 @@ by a factor $\pi_j$ (in this case: $j=1$) so that
 f_{\rm MC}(E,\Ombold,{\bf r}) \pi_j(E,\Ombold,{\bf r})
  = \Pi(E,\Ombold,{\bf r}) .
 \end{equation}
-For the sources present in version 1.4, 
+For the sources present in version \version, 
 only the $(\Ombold, {\bf r})$ dependence of the correction factors
 are taken into account.
 
