--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -746,7 +746,7 @@ and the number of statistical events $N$. This will result in a line such as:
 \end{quote}
 
 For 1D, 2D and 3D monitors/detectors, the data histogram store in the files
-is given per bin when the signal is the neutron intensity ({\it i.e.} most of the cases).
+is given {\emph per bin} when the signal is the neutron intensity ({\it i.e.} most of the cases). Most monitors define binning for an $x_n$ axis value as the sum of events falling into the $[ x_n x_{n+1} ]$ range, {\it i.e} the bins are {\emph not} centered, but left aligned.
 Using the Monitor\_nD component, it is possible to monitor other signals using the
 '\verb+signal=+{\it variable\_name}' in the 'options' parameter (refer to that
 component documentation).
