--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -498,7 +498,7 @@ component.
 \index{Keyword!SETTING PARAMETERS}
 This declares the definition and setting parameters of the component.
 The parameters define the characteristics of the component, and can be
-accessed from the \verb+SAVE+, \verb+FINALLY+, and \verb+MCDISPLAY+ sections (see below),
+accessed from the \verb+TRACE+, \verb+INITIALIZE+, \verb+SAVE+, \verb+FINALLY+, and \verb+MCDISPLAY+ sections (see below),
 as well as in \verb+EXTEND+ sections of the instrument definition (see section~\ref{s:instrdefs}).
 \index{Parameters!Setting}
 \index{Parameters!Definition}
