--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -252,12 +252,12 @@ resulting Coord structure.
 
 \section{Reading a data file into a vector/matrix (Table input, \texttt{read\_table-lib})}
 \index{Library!read\_table-lib (Read\_Table)|textbf}
-The \verb+read_table-lib+ provides functionalities for reading text (and binary) data files. To use this library, add a \verb+%include "read_table-lib"+ in your component definition DECLARE or SHARE section. Available functions are:
+The \verb+read_table-lib+ provides functionalities for reading text (and binary) data files. To use this library, add a \verb+%include "read_table-lib"+ in your component definition DECLARE or SHARE section. Tables are structures of type $t_Table$.
 
+Available functions to read \emph{a single} vector/matrix are:
 \begin{itemize}
 \item {\bf Table\_Init}(\&$Table$) and {\bf Table\_Free}(\&$Table$) initialize and free allocated memory blocks
-\item {\bf Table\_Read}(\&$Table$, $filename$, $block$) reads numerical block number $block$ (0 for all) data from \emph{text} file $filename$ into $Table$. The block number changes when the numerical data changes its size, or a comment is encoutered (lines starting by '\verb+# ; % /+'). If the data could not be read, then $Table.data$ is NULL and $Table.rows = 0$. You may then try to read it using Table\_Read\_Offset\_Binary.
-\item {\bf Table\_Rebin}(\&$Table$) rebins $Table$ rows with increasing, evenly spaced first column (index 0), e.g. before using Table\_Value.
+\item {\bf Table\_Read}(\&$Table$, $filename$, $block$) reads numerical block number $block$ (0 to catenate all) data from \emph{text} file $filename$ into $Table$, which is as well initialized in the process. The block number changes when the numerical data changes its size, or a comment is encoutered (lines starting by '\verb+# ; % /+'). If the data could not be read, then $Table.data$ is NULL and $Table.rows = 0$. You may then try to read it using Table\_Read\_Offset\_Binary. Return value is the number of read elements.
 \item {\bf Table\_Read\_Offset}(\&$Table$, $filename$, $block$, \&$offset$, $n_{rows}$) does the same as Table\_Read except that it starts at offset $offset$ (0 means begining of file) and reads $n_{rows}$ lines (0 for all). The $offset$ is returned as the final offset reached after reading the $n_{rows}$ lines.
 \item {\bf Table\_Read\_Offset\_Binary}(\&$Table$, $filename$, $type$,
   $block$, \&$offset$, $n_{rows}$, $n_{columns}$) does the same as
@@ -265,11 +265,19 @@ The \verb+read_table-lib+ provides functionalities for reading text (and binary)
   be "float" or "double"), the number $n_{rows}$ of rows to read, each
   of them having $n_{columns}$ elements. No text header should be present
   in the file.
+\item {\bf Table\_Rebin}(\&$Table$) rebins $Table$ rows with increasing, evenly spaced first column (index 0), e.g. before using Table\_Value.
 \item {\bf Table\_Info}$(Table)$ print information about the table $Table$.
 \item {\bf Table\_Index}($Table, m, n$) reads the $Table[m][n]$ element.
 \item {\bf Table\_Value}($Table, x, n$) looks for the closest $x$
   value in the first column (index 0), and extracts in this row the
   $n$-th element (starting from 0). The first column is thus the 'x' axis for the data.
+\end{itemize}
+
+Available functions to read \emph{an array} of vectors/matrices in a \emph{text} file are:
+\begin{itemize}
+\item {\bf Table\_Read\_Array}($File$, \&$n$) read and split $file$ into as many blocks as necessary and return a $t_Table$ array. Each block contains a single vector/matrix. This only works for text files. The number of blocks in put into $n$.
+\item {\bf Table\_Free\_Array}(\&$Table$) free the $Table$ array.
+\item {\bf Table\_Info\_Array}(\&$Table$) display information about all data blocks.
 \end{itemize}
 
 The format of text files is free. Lines starting by '\verb+# ; % /+' characters are considered to be comments, and stored in $Table.header$. Data blocks are vectors and matrices. Block numbers are counted starting from 1, and changing when a comment is found, or the column number changes. For instance, the file 'MCSTAS/data/BeO.trm' (Transmission of a Berylium filter) looks like:
@@ -290,24 +298,36 @@ The $filename$ is first searched into the current directory (and all user additi
 
 A usage example for this library part may be:
 \begin{verbatim}
-    t_Table rTable;       // declares a t_Table structure
-    char file="BeO.trm";  // a file name
-    double x,y;
+  t_Table Table;       // declares a t_Table structure
+  char file[]="BeO.trm";  // a file name
+  double x,y;
 
-    Table_Init(&rTable);  // initialize the table to empty state
-    Table_Read(&rTable, file, 1); // reads the first numerical block
-    Table_Info(rTable);   // display table informations
-    ...
-    x = Table_Index(rTable, 2,5);  // reads the 3rd row, 6th column element
-                                   // of the table. Indexes start at zero in C.
-    y = Table_Value(rTable, 1.45,1);  // looks for value 1.45 in 1st column (x axis)
-                                      // and extract 2nd column value of that row
-    Table_Free(&rTable);  // free allocated memory for table
-
+  Table_Read(&Table, file, 1);  // initializes and reads the first numerical block
+  Table_Info(Table);            // display table informations
+  ...
+  x = Table_Index(Table, 2,5);  // reads the 3rd row, 6th column element
+                                 // of the table. Indexes start at zero in C.
+  y = Table_Value(Table, 1.45,1);  // looks for value 1.45 in 1st column (x axis)
+                                    // and extract 2nd column value of that row
+  Table_Free(&Table);              // free allocated memory for table
 \end{verbatim}
 Additionally, if the block number (3rd) argument of  {\bf Table\_Read} is 0, all blocks will be catenated.
 The {\bf Table\_Value} function assumes that the 'x' axis is the first column (index 0).
 Other functions are used the same way with a few additional parameters, e.g. specifying an offset for reading files, or reading binary data.
+
+This other example for text files shows how to read many data blocks in a text file:
+\begin{verbatim}
+  t_Table *Table;       // declares a t_Table structure array
+  long     n;
+  double y;
+
+  Table = Table_Read_Array("file.dat", &n); // initializes and reads the all numerical block
+  n = Table_Info_Array(Table);     // display informations for all blocks (also returns n)
+
+  y = Table_Index(Table[0], 2,5);  // reads in 1st block the 3rd row, 6th column element
+                                   // ONLY use Table[i] with i < n !
+  Table_Free_Array(Table);         // free allocated memory for Table
+\end{verbatim}
 
 You may look into, for instance, the Monochromator\_curved component, or the Virtual\_input component for other implementation examples.
 
