--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -252,11 +252,21 @@ resulting Coord structure.
 
 \section{Reading a data file into a vector/matrix (Table input, \texttt{read\_table-lib})}
 \index{Library!read\_table-lib (Read\_Table)|textbf}
-The \verb+read_table-lib+ provides functionalities for reading text (and binary) data files. To use this library, add a \verb+%include "read_table-lib"+ in your component definition DECLARE or SHARE section. Tables are structures of type $t_Table$.
+The \verb+read_table-lib+ provides functionalities for reading text (and binary) data files. To use this library, add a \verb+%include "read_table-lib"+ in your component definition DECLARE or SHARE section. Tables are structures of type $t_Table$ (see \verb+read_table-lib.h+ file for details):
+\begin{verbatim}
+    /* t_Table structure (most important members) */
+    double *data;     /* Use Table_Index(Table, i j) to extract [i,j] element */
+    long    rows;     /* number of rows */
+    long    columns;  /* number of columns */
+    char   *header;   /* the header with comments */
+    char   *filename; /* file name or title */
+    double  min_x;    /* minimum value of 1st column/vector */
+    double  max_x;    /* maximum value of 1st column/vector */
+\end{verbatim}
 
 Available functions to read \emph{a single} vector/matrix are:
 \begin{itemize}
-\item {\bf Table\_Init}(\&$Table$) and {\bf Table\_Free}(\&$Table$) initialize and free allocated memory blocks
+\item {\bf Table\_Init}(\&$Table$, $rows$, $columns$) returns an allocated Table structure. Use $rows=columns=0$ not to allocate memory. Calls to Table\_Init are optional as other functions do it already.
 \item {\bf Table\_Read}(\&$Table$, $filename$, $block$) reads numerical block number $block$ (0 to catenate all) data from \emph{text} file $filename$ into $Table$, which is as well initialized in the process. The block number changes when the numerical data changes its size, or a comment is encoutered (lines starting by '\verb+# ; % /+'). If the data could not be read, then $Table.data$ is NULL and $Table.rows = 0$. You may then try to read it using Table\_Read\_Offset\_Binary. Return value is the number of read elements.
 \item {\bf Table\_Read\_Offset}(\&$Table$, $filename$, $block$, \&$offset$, $n_{rows}$) does the same as Table\_Read except that it starts at offset $offset$ (0 means begining of file) and reads $n_{rows}$ lines (0 for all). The $offset$ is returned as the final offset reached after reading the $n_{rows}$ lines.
 \item {\bf Table\_Read\_Offset\_Binary}(\&$Table$, $filename$, $type$,
@@ -271,6 +281,7 @@ Available functions to read \emph{a single} vector/matrix are:
 \item {\bf Table\_Value}($Table, x, n$) looks for the closest $x$
   value in the first column (index 0), and extracts in this row the
   $n$-th element (starting from 0). The first column is thus the 'x' axis for the data.
+\item {\bf Table\_Free}(\&$Table$) free allocated memory blocks.
 \end{itemize}
 
 Available functions to read \emph{an array} of vectors/matrices in a \emph{text} file are:
@@ -298,33 +309,33 @@ The $filename$ is first searched into the current directory (and all user additi
 
 A usage example for this library part may be:
 \begin{verbatim}
-  t_Table Table;       // declares a t_Table structure
+  t_Table Table;       // declare a t_Table structure
   char file[]="BeO.trm";  // a file name
   double x,y;
 
-  Table_Read(&Table, file, 1);  // initializes and reads the first numerical block
+  Table_Read(&Table, file, 1);  // initialize and read the first numerical block
   Table_Info(Table);            // display table informations
   ...
-  x = Table_Index(Table, 2,5);  // reads the 3rd row, 6th column element
-                                 // of the table. Indexes start at zero in C.
-  y = Table_Value(Table, 1.45,1);  // looks for value 1.45 in 1st column (x axis)
-                                    // and extract 2nd column value of that row
-  Table_Free(&Table);              // free allocated memory for table
+  x = Table_Index(Table, 2,5);  // read the 3rd row, 6th column element
+                                // of the table. Indexes start at zero in C.
+  y = Table_Value(Table, 1.45,1);  // look for value 1.45 in 1st column (x axis)
+                                // and extract 2nd column value of that row
+  Table_Free(&Table);           // free allocated memory for table
 \end{verbatim}
 Additionally, if the block number (3rd) argument of  {\bf Table\_Read} is 0, all blocks will be catenated.
 The {\bf Table\_Value} function assumes that the 'x' axis is the first column (index 0).
 Other functions are used the same way with a few additional parameters, e.g. specifying an offset for reading files, or reading binary data.
 
-This other example for text files shows how to read many data blocks in a text file:
+This other example for text files shows how to read many data blocks:
 \begin{verbatim}
-  t_Table *Table;       // declares a t_Table structure array
+  t_Table *Table;       // declare a t_Table structure array
   long     n;
   double y;
 
-  Table = Table_Read_Array("file.dat", &n); // initializes and reads the all numerical block
+  Table = Table_Read_Array("file.dat", &n); // initialize and read the all numerical block
   n = Table_Info_Array(Table);     // display informations for all blocks (also returns n)
 
-  y = Table_Index(Table[0], 2,5);  // reads in 1st block the 3rd row, 6th column element
+  y = Table_Index(Table[0], 2,5);  // read in 1st block the 3rd row, 6th column element
                                    // ONLY use Table[i] with i < n !
   Table_Free_Array(Table);         // free allocated memory for Table
 \end{verbatim}
