Start to update manual for v1.9 We need to share comp manual work urgently
git-svn-id: https://svn.mccode.org/svn/McStasTeX@77 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/beamstop.tex
+++ b/trunk/beamstop.tex
@@ -3,15 +3,15 @@
 
 \component{Beamstop}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $r$}{}
 
-The component {\bf Beamstop} can be seen as the reverse of 
+The component {\bf Beamstop} can be seen as the reverse of
 the {\bf Slit} component.
-It sets up an area at the $z=0$ plane, and propagates the neutrons 
+It sets up an area at the $z=0$ plane, and propagates the neutrons
 onto this plane (by the kernel call PROP\_Z0).
-Neutrons within this area are ABSORB'ed, 
+Neutrons within this area are ABSORB'ed,
 while all other neutrons are unaffected.
 
 By using this beamtop, some neutrons contributing to the background
-in a real experiment will be neglected. 
+in a real experiment will be neglected.
 These are the ones that scatter off the side
 of the beamstop, or penetrates the absorbing material.
 Further, the holder of the beamstop is not simulated.
@@ -19,5 +19,15 @@ Further, the holder of the beamstop is not simulated.
 {\bf Beamstop} can be either circular or rectangular.
 The input parameters of {\bf Beamstop} are the four coordinates,
 $(x_{\rm min}, x_{\rm max}, y_{\rm min}, y_{\rm max})$
-defining the opening of a rectangle, or the radius $r$ of 
+defining the opening of a rectangle, or the radius $r$ of
 a circle, depending on which parameters are specified.
+
+In the case you are not interested by the 'direct beam' (e.g. after a monochromator or sample), it is possible to simulate an ideal beamstop so that only the scattered beam is left. This is for instance the case when you only want to see the scattered neutrons from a sample, removing the direct beam and any background signal from other parts of the instrument.
+\begin{verbatim}
+COMPONENT MySample=V_sample(...) AT (...)
+EXTEND
+%{
+  if (!SCATTERED) ABSORB;
+%}
+\end{verbatim}
+The {\bf Beamstop} component is then not required anymore.
