--- a/trunk/comp.tex
+++ b/trunk/comp.tex
@@ -3,7 +3,7 @@
 \chapter{About the component library}
 \label{c:components}
 The component library is
-maintained by the \MCS\ system group. A number of basic components 
+maintained by the \MCS\ system group. A number of basic components
 ``belongs'' the \MCS\ system, and are supported and tested by the \MCS\
 team.
 
@@ -13,11 +13,11 @@ they contribute.
 \MCS\ users are encouraged to send their
 contributions to us for inclusion in future releases.
 
-In the description of the theory behind the component functionality 
-we will use the usual symbols {\bf r} for the position 
-$(x,y,z)$ of the particle (unit m), and {\bf v} for 
+In the description of the theory behind the component functionality
+we will use the usual symbols {\bf r} for the position
+$(x,y,z)$ of the particle (unit m), and {\bf v} for
 the particle velocity $(v_x, v_y, v_z)$ (unit m/s).
-Another frequently used symbol is 
+Another frequently used symbol is
 the wave vector ${\bf k} = m_{\rm N} {\bf v}/\hbar$ , where
 $m_{\rm N}$ is the neutron mass. {\bf k} is usually given in
 \AA$^{-1}$, while neutron energies are given in meV.
@@ -27,19 +27,22 @@ and are used in connection with the neutron state before and after
 an interaction with the component in question.
 Note that all mentioning of component geometry refer to
 the local coordinate system of the individual component.
-The axis convention is so that the $z$ axis is along 
-the neutron propagation axis, the $y$ axis is vertical up, 
+The axis convention is so that the $z$ axis is along
+the neutron propagation axis, the $y$ axis is vertical up,
 and the $x$ completes the right-handed coordinate system.
+Most components 'position' (as specified in the instrument description with the \verb+AT+ keyword) corresponds to the input side of it. Some components are centered (e.g. radial components).
+
+Components are usually not designed to overlap. Warnings will be issued during simulation when no neutron can reach portions of the instrument, or neutrons are removed for computational reasons. This is usually the sign of either overlapping components or a very low intensity.
 
 Source code for all components may be found in the \verb+lib/mcstas/+
-subdirectory of the McStas installation; 
-the default is \verb+/usr/local/lib/mcstas/+ 
+subdirectory of the McStas installation;
+the default is \verb+/usr/local/lib/mcstas/+
 on Unix-like systems and \verb+C:\mcstas\lib+ on Windows systems, but it can be
-changed using the \verb+MCSTAS+ environment variable. 
+changed using the \verb+MCSTAS+ environment variable.
 \index{Environment variable!MCSTAS}
 
 As a complement to this Component Manual, we encourage users to use
-the \verb+mcdoc+ front-end which enables to display both the 
+the \verb+mcdoc+ front-end which enables to display both the
 catalog of the \MCS\ library, e.g using: \index{Tools!mcdoc}
 \begin{quote}
   \verb|mcdoc --show|
@@ -49,11 +52,11 @@ as well as the documentation of specific components, e.g with:
   \verb|mcdoc --text| {\it name} \\
   \verb|mcdoc --show| {\it file.comp}
 \end{quote}
-The first line will search for all components matching the {\it name}, 
-and display their help section as text, 
-whereas the second example will display the help corresponding to 
-the {\it file.comp} component, using your 
-BROWSER\index{Environment variable!BROWSER} setting, or as text if unset. 
+The first line will search for all components matching the {\it name},
+and display their help section as text,
+whereas the second example will display the help corresponding to
+the {\it file.comp} component, using your
+BROWSER\index{Environment variable!BROWSER} setting, or as text if unset.
 The \verb+--help+ option will display the command help, as usual.
 
 An overview of the component library is also given at the \MCS\ home page...
