--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -171,7 +171,7 @@ resulting Coord structure.
   length 1.
 \item {\bf scalar\_prod}$(a_x,a_y,a_z,b_x,b_y,b_z)$. Returns the scalar
   product of the two vectors $(a_x,a_y,a_z)$ and $(b_x,b_y,b_z)$.
-\item {\bf vecprod}$(a_x,a_y,a_z,b_x,b_y,b_z, c_x,c_y,c_z)$. Sets
+\item {\bf vec\_prod}$(a_x,a_y,a_z,b_x,b_y,b_z, c_x,c_y,c_z)$. Sets
   $(a_x,a_y,a_z)$ equal to the vector product $(b_x,b_y,b_z) \times (c_x,c_y,c_z)$.
 \item {\bf rotate}$(x,y,z,v_x,v_y,v_z,\varphi,a_x,a_y,a_z)$. Set
   $(x,y,z)$ to the result of rotating the vector $(v_x,v_y,v_z)$
