--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -19,7 +19,7 @@ place. Essential support has also been given by Prof.~Robert McGreevy.
 %Bech Christensen, and Erik Lauridsen, are gratefully acknowledged; they
 %gave us an excellent opportunity to pinpoint a vast amount of serious
 %errors in the test version.  Useful comments to this document itself
-%have been given by Bella Lake and Alan Tennant.  
+%have been given by Bella Lake and Alan Tennant.
 We have also benefited
 from discussions with many other people in the neutron scattering
 community, too numerous to mention here.
@@ -31,16 +31,17 @@ community, too numerous to mention here.
 %users to contribute components with manual entries for inclusion in
 %future versions of \MCS.
 
-This project has been supported by the European Union, initially
-through the ``XENNI'' network and ``Cool Neutrons'' RTD program, later
-through the ``SCANS'' network, and today the ``MCNSI`` network package.
-
 In case of any errors, questions, or suggestions, %or other need for support should arise,
-%do not hesitate to 
+%do not hesitate to
 contact the authors at \verb+mcstas@risoe.dk+
 or consult the \MCS\ WWW home page~\cite{mcstas_webpage}.
 
-If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package.
+If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package. We also encourage you to refer to this software when publishing results, with the following citations:
+\begin{itemize}
+\item{K. Lefmann and K. Nielsen, Neutron News 10, 20, (1999).}
+\item{P. Willendrup, E. Farhi and K. Lefmann, Physica B, 350 (2004) 735.}
+\end{itemize}
+
 
 \section*{\MCS\ \version\ contributors}
 Several people outside the core developer team have been contributing
@@ -59,4 +60,10 @@ to \MCS\ \version:
 \end{itemize}
 Thank you guys! This is what \MCS\ is all about!
 
-
+The \MCS\ project has been supported by the European Union, initially
+through the XENNI program and the RTD ``Cool Neutrons'' program in FP4,
+In FP5, \MCS\ was supported strongly through the
+``SCANS'' program.
+Currently, in FP6, \MCS\ is supported through the Joint Research Activity
+``MCNSI'' under the Integrated Infrastructure Initiative ``NMI3'', see
+the WWW home pages~\cite{mcnsi_webpage,nmi3_webpage}.
