--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -4,7 +4,7 @@
 \label{c:source}
 \index{Sources}
 
-\MCS\ contains a number of different source components, 
+\MCS\ contains a number of different source components,
 and any simulation will contain exactly one source.
 The main function of a source is to determine a set of initial
 parameters $({\bf r}, {\bf v}, t)$, or equivalent (${\bf r}, v, \Ombold , t $),
@@ -13,9 +13,19 @@ suitable distributions. For example, the initial position is
 always found from a uniform distribution over the source surface.
 For time-of-flight sources, the choice of $t$ is being made on basis of
 detailed analytical expressions.
-For other sources, the initial neutron time is set to zero.
+For other sources, the initial neutron time is set to zero. In the case you would like to use a 'conventional' source (e.g. steady state source) with time-of-flight settings, it is then \emph{important} to set the time of each neutron using a random number in a distribution. This may be achieved thanks to the \verb+EXTEND+ keyword in the instrument description source:
 
-Polarization is not relevant for sources, 
+\begin{verbatim}
+  TRACE
+
+  COMPONENT MySource=Source_gen(...) AT (...)
+  EXTEND
+  %{
+    t = 1e-3*randpm1(); /* set time to +/- 1 ms */
+  %}
+\end{verbatim}
+
+Polarization is not relevant for sources,
 and we let the neutron spin ${\bf s}=(0,0,0)$.
 
 The shape of most sources can be chosen to be either circular or rectangular.
@@ -23,15 +33,13 @@ The initial neutron velocity is selected within an interval
 of either the corresponding energy or the corresponding wavelength.
 
 The flux of the sources deserves special attention. The total neutron
-intensity is defined as the sum of weights of all emitted neutron rays 
-during one simulation 
+intensity is defined as the sum of weights of all emitted neutron rays
+during one simulation
 (the unit of total neutron weight is thus neutrons per second).
 The flux is then defined as intensity per area of the source.
 For samples that uses a realistic energy/wavelength distribution,
 the neutron intensity is given as the integrated neutron intensity
-inside the  
-
-(CHECK THIS, WHAT ABOUT THE SOLID ANGLE??)
+inside the energy/wavelength range. Similarly, as most sources can focus neutrons to an input window (usually the guide entrance), the intensity is scaled to account for the corresponding solid angle.
 
 The flux~$\Phi$ is the number of neutrons emitted per second from a
 one~cm$^2$ area on the source surface, with direction within a one
@@ -40,14 +48,14 @@ interval. The total number of neutrons emitted towards a given diafraghm
 in one second is therefore
 $$ N_{\rm total} = \Phi A \Omega \Delta\lambda $$
 where $A$ is the source area, $\Omega$ is the solid angle of the
-diafraghm as seen from the source surface, and $\Delta\lambda$ is the
+diaphragm as seen from the source surface, and $\Delta\lambda$ is the
 width of the wavelength interval in which neutrons are emitted (assuming
 a uniform wavelength spectrum). If $N_{\rm sim}$ denotes the number of
 neutron histories to simulate, the initial neutron weight $p_0$ must be set to
-$$ p_0 = \frac{N_{\rm total}}{N_{\rm sim}} = 
+$$ p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
     \frac{\Phi}{N_{\rm sim}} A \Omega \Delta\lambda $$
 
-The simulations are performed so that detector intensities 
+The simulations are performed so that detector intensities
 are independent of the number of neutron histories simulated
 (though of course more neutron histories will give better statistics).
 
